--- a/block-BHaaci/index.html
+++ b/block-BHaaci/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <div class="bg-img">
+    <div class="bg-im">
         
         <div class="box1">
 
